Add param to td schema

--- a/stats/2023-06-06-referentiel-cantines.qmd
+++ b/stats/2023-06-06-referentiel-cantines.qmd
@@ -60,6 +60,13 @@ print(f"Nous avons enlevé {nbre_canteens - len(canteens)} doublons")
 print("Nombre de cantines uniques: ", len(canteens))
 ```
 
+# Suppression des cantines fermées
+```{python Suppression des cantines fermées}
+canteens = canteens[canteens["deletion_date"].isna()]
+print("Nombre de cantines uniques: ", len(canteens))
+
+```
+
 
 ```{python Construction du schéma des données}
 
